# CS1999-buggy-race-editor

./: .gitignore  .replit  README.md  app.py  init_db.py  pyproject.toml
static/: app.css
templates/: base.html  buggy-form.html  buggy.html  index.html
