[tool.poetry]
name = "cs1998-buggy-race-editor"
version = "0.1.0"
description = ""
authors = ["davewhiteland <david.whiteland@rhul.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
